--- a/src/App.css
+++ b/src/App.css
@@ -23,14 +23,14 @@ p {
 /* HEADER */
 .main_header {
   z-index: 9999;
-  background-color: #1d1d1d;
+  /* background-color: #1d1d1d; */
   height: 60px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin: 0 auto;
   width: 90%;
-  border-bottom: 1px solid rgba(255,255,255,.2);
+  /* border-bottom: 1px solid rgba(255,255,255,.2); */
 }
 .nav {
   background-color: #1d1d1d;
